terraform fmt, storage module

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run: echo "Checked out branch '${{ github.ref }}' of the ${{ github.repository }} repository"
 
-      - run: Install Terraform
+      - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.7
