--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,8 +54,8 @@ jobs:
         working-directory: ./infra
         run: terraform plan -no-color -input=false
         env:
-          DATABRICKS_ACCOUNT_USERNAME: ${{ secrets.DATABRICKS_ACCOUNT_USERNAME }}
-          DATABRICKS_ACCOUNT_PASSWORD: ${{ secrets.DATABRICKS_ACCOUNT_PASSWORD }}
-          DATABRICKS_ACCOUNT_ID: ${{ secrets.DATABRICKS_ACCOUNT_ID }}
+          TF_VAR_databricks_account_username: ${{ secrets.DATABRICKS_ACCOUNT_USERNAME }}
+          TF_VAR_databricks_account_password: ${{ secrets.DATABRICKS_ACCOUNT_PASSWORD }}
+          TF_VAR_databricks_account_id: ${{ secrets.DATABRICKS_ACCOUNT_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
